--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,6 @@
-# Virtual Environment
-venv/
-env/
-.venv/
-.env/
-ENV/
-pythonenv*/
+
 virtual_env/
 
-# Python bytecode
-__pycache__/
-*.py[cod]
-*$py.class
+backend/d_env/
+backend/diary.db
 
-# Distribution / packaging
-dist/
-build/
-*.egg-info/
-
-# Local development settings
-.env
-.env.local
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS specific files
-.DS_Store
-Thumbs.db
